cabal-version:      1.24
name:               reflex-dom-core
version:            0.8.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         ryan.trinkle@gmail.com
author:             Ryan Trinkle
stability:          Experimental
synopsis:           Functional Reactive Web Apps with Reflex
description:
    Web applications without callbacks or side-effects.
    Reflex-DOM brings the power of functional reactive programming (FRP) to the web.
    Build HTML and other Document Object Model (DOM) data with a pure functional interface.
    .
    Reflex-DOM is a Functional Reactive web framework based on the Reflex FRP engine: <https://reflex-frp.org/>.
    .
    The @reflex-dom@ package is a small wrapper around the @reflex-dom-core@ package. It pulls in the
    correct set of dependencies for each target platform (GHCJS, WebKitGTK, WASM, mobile, etc.).
    Libraries should depend on @reflex-dom-core@ and executables will usually depend on @reflex-dom@.
    All of @reflex-dom-core@'s modules are re-exported by @reflex-dom@.

category:
    FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface

build-type:         Simple
extra-source-files:
    src-ghc/Foreign/JavaScript/Internal/Utils.hs
    src-ghcjs/Foreign/JavaScript/Internal/Utils.hs
    src/Reflex/Dom/Xhr/Foreign.hs
    src/Reflex/Dom/WebSocket/Foreign.hs
    src/Reflex/Dom/Xhr/ResponseType.hs
    src/Reflex/Dom/Xhr/Exception.hs
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/reflex-frp/reflex-dom
    subdir:   reflex-dom-core

flag use-template-haskell
    description: Use template haskell to generate lenses
    manual:      True

flag use-reflex-optimizer
    description:
        Use the GHC plugin Reflex.Optimizer on some of the modules in the package.  This is still experimental.

    default:     False
    manual:      True

flag expose-all-unfoldings
    description:
        Build the library with -fexpose-all-unfoldings which can help client code specialize better

    default:     False
    manual:      True

flag profile-reflex
    description: Add a layer of profiling to all Reflex events in the system
    default:     False
    manual:      True

flag split-these
    description: Use split these/semialign packages

flag hydration-tests
    description:
        Whether to run the hydration tests (currently only available on linux)

    manual:      True

flag gc-tests
    description:
        Whether to run the gc tests (currently only available on linux)

    manual:      True

library
    exposed-modules:
        Foreign.JavaScript.TH
        Foreign.JavaScript.Orphans
        Foreign.JavaScript.Utils
        Reflex.Dom.Builder.Class
        Reflex.Dom.Builder.Class.Events
        Reflex.Dom.Builder.Immediate
        Reflex.Dom.Builder.InputDisabled
        Reflex.Dom.Builder.Hydratable
        Reflex.Dom.Builder.Static
        Reflex.Dom.Class
        Reflex.Dom.Core
        Reflex.Dom.Location
        Reflex.Dom.Main
        Reflex.Dom.Modals.Class
        Reflex.Dom.Old
        Reflex.Dom.Prerender
        Reflex.Dom.Time
        Reflex.Dom.WebSocket
        Reflex.Dom.WebSocket.Query
        Reflex.Dom.Widget
        Reflex.Dom.Widget.Basic
        Reflex.Dom.Widget.Input
        Reflex.Dom.Widget.Lazy
        Reflex.Dom.Widget.Resize
        Reflex.Dom.Xhr
        Reflex.Dom.Xhr.FormData

    hs-source-dirs:   src
    other-modules:
        Foreign.JavaScript.Internal.Utils
        Reflex.Dom.WebSocket.Foreign
        Reflex.Dom.Xhr.Foreign
        Reflex.Dom.Xhr.ResponseType
        Reflex.Dom.Xhr.Exception

    default-language: Haskell98
    ghc-options:
        -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans
        -fspecialise-aggressively

    ghc-prof-options: -fprof-auto
    build-depends:
        aeson >=0.8 && <2.3,
        base >=4.7 && <4.21,
        bifunctors >=4.2 && <6,
        bimap >=0.3 && <0.6,
        blaze-builder >=0.4.1 && <0.5,
        bytestring >=0.10 && <0.13,
        case-insensitive <1.3,
        commutative-semigroups >=0.1 && <0.3,
        containers >=0.6 && <0.8,
        constraints >=0.9 && <0.15,
        contravariant >=1.4 && <1.6,
        data-default >=0.5 && <0.8,
        dependent-map >=0.3 && <0.5,
        dependent-sum >=0.6 && <0.8,
        dependent-sum-template >=0.2 && <0.3,
        directory >=1.2 && <1.4,
        exception-transformers >=0.4 && <0.5,
        ghcjs-dom >=0.9.1.0 && <0.10,
        jsaddle >=0.9.0.0 && <0.10,
        keycode >=0.2.1 && <0.3,
        lens >=4.7 && <5.4,
        monad-control >=1.0.1 && <1.1,
        mtl >=2.1 && <2.4,
        primitive >=0.5 && <0.10,
        random >=1.1 && <1.3,
        ref-tf >=0.4 && <0.6,
        reflex >=0.8.2.1 && <1,
        semigroups >=0.16 && <0.21,
        stm >=2.4 && <2.6,
        text >=1.2 && <2.2,
        transformers >=0.3 && <0.7,
        network-uri >=2.6.1 && <2.7,
        zenc >=0.1 && <0.2

    if (impl(ghcjs >=0) || arch(javascript))
        hs-source-dirs: src-ghcjs
        build-depends:
            ghcjs-base,
            hashable >=1.2 && <1.5

    else
        hs-source-dirs: src-ghc

        if !os(windows)
            build-depends: unix >=2.7 && <2.9

    if flag(split-these)
        build-depends:
            semialign >=1 && <1.4,
            these >=1 && <1.3

    else
        build-depends: these >=0.4 && <1.0

    if flag(expose-all-unfoldings)
        ghc-options: -fexpose-all-unfoldings

    if flag(use-reflex-optimizer)
        ghc-options: -fplugin=Reflex.Optimizer

    if flag(profile-reflex)
        cpp-options: -DPROFILE_REFLEX

    if flag(use-template-haskell)
        cpp-options:      -DUSE_TEMPLATE_HASKELL
        other-modules:    Reflex.Dom.Builder.Class.TH
        other-extensions: TemplateHaskell
        build-depends:
            dependent-sum-template >=0.1 && <0.3,
            template-haskell >=2.12.0 && <2.23

test-suite hlint
    type:             exitcode-stdio-1.0
    main-is:          hlint.hs
    hs-source-dirs:   test
    default-language: Haskell98
    build-depends:
        base,
        hlint >=2.0 && <4.0

    if arch(javascript)
        buildable: False

test-suite hydration
    type:             exitcode-stdio-1.0
    main-is:          hydration.hs
    hs-source-dirs:   test
    default-language: Haskell98
    ghc-options:
        -rtsopts "-with-rtsopts=-T -V0" -Wall -fwarn-tabs
        -funbox-strict-fields -O2 -ferror-spans

    ghc-prof-options: -fprof-auto -optP-DPROFILING
    build-depends:
        base,
        aeson <2.3,
        async <2.3,
        bytestring,
        chrome-test-utils,
        constraints <0.15,
        constraints-extras <0.5,
        containers <0.7,
        dependent-map <0.5,
        dependent-sum <0.8,
        dependent-sum-template <0.3,
        directory,
        exceptions,
        filepath,
        ghcjs-dom <0.10,
        hspec <2.12,
        hspec-core <2.12,
        hspec-webdriver <1.3,
        http-types <0.13,
        HUnit <1.7,
        jsaddle <0.10,
        jsaddle-warp <0.10,
        lens <5.4,
        lifted-base <0.3,
        network <3.3,
        random <1.3,
        ref-tf <0.6,
        reflex <0.10,
        reflex-dom-core,
        process,
        silently <1.3,
        temporary <1.4,
        text <2.2,
        wai <3.3,
        wai-websockets <3.1,
        warp <3.5,
        webdriver <0.13,
        websockets <0.14,
        which <0.3

    if (((!os(linux) || !arch(x86_64)) || flag(profile-reflex)) || !flag(hydration-tests))
        buildable: False

test-suite gc
    type:             exitcode-stdio-1.0
    main-is:          gc.hs
    hs-source-dirs:   test
    default-language: Haskell98
    ghc-options:
        -rtsopts -with-rtsopts=-T -Wall -fwarn-tabs -funbox-strict-fields
        -O2 -ferror-spans

    ghc-prof-options: -fprof-auto -optP-DPROFILING
    build-depends:
        base,
        chrome-test-utils,
        jsaddle <0.10,
        jsaddle-warp <0.10,
        process,
        reflex <0.10,
        reflex-dom-core,
        text <2.2

    if ((!os(linux) || !arch(x86_64)) || !flag(gc-tests))
        buildable: False
