cabal-version:      1.24
name:               reflex-dom
version:            0.6.3.1
license:            BSD3
license-file:       LICENSE
maintainer:         ryan.trinkle@gmail.com
author:             Ryan Trinkle
stability:          Experimental
synopsis:           Functional Reactive Web Apps with Reflex
description:
    Web applications without callbacks or side-effects.
    Reflex-DOM brings the power of functional reactive programming (FRP) to the web.
    Build HTML and other Document Object Model (DOM) data with a pure functional interface.
    .
    Reflex-DOM is a Functional Reactive web framework based on the Reflex FRP engine: <https://reflex-frp.org/>.
    .
    The @reflex-dom@ package is a small wrapper around the @reflex-dom-core@ package. It pulls in the
    correct set of dependencies for each target platform (GHCJS, WebKitGTK, WASM, mobile, etc.).
    Libraries should depend on @reflex-dom-core@ and executables will usually depend on @reflex-dom@.
    All of @reflex-dom-core@'s modules are re-exported by @reflex-dom@.
    .
    For Hackage documentation, please see: <https://hackage.haskell.org/package/reflex-dom-core>.

category:
    FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface

build-type:         Simple
extra-source-files:
    java/org/reflexfrp/reflexdom/MainWidget.java
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/reflex-frp/reflex-dom
    subdir:   reflex-dom

flag use-warp
    description: Use jsaddle-warp server
    default:     False
    manual:      True

flag webkit2gtk
    description: Use WebKit2 version of WebKitGTK.

flag use-reflex-optimizer
    description:
        Use the GHC plugin Reflex.Optimizer on some of the modules in the package.  This is still experimental.

    default:     False
    manual:      True

flag expose-all-unfoldings
    description:
        Build the library with -fexpose-all-unfoldings which can help client code specialize better

    default:     False
    manual:      True

flag build-examples
    description: Build the executables in ./examples
    default:     False
    manual:      True

flag wasm32
    description: Build for wasm32 architecture
    default:     False
    manual:      True

library
    exposed-modules:
        Reflex.Dom
        Reflex.Dom.Internal
        Reflex.Dom.Location.Platform

    reexported-modules:
        Foreign.JavaScript.Orphans,
        Foreign.JavaScript.TH,
        Foreign.JavaScript.Utils,
        Reflex.Dom.Builder.Class,
        Reflex.Dom.Builder.Class.Events,
        Reflex.Dom.Builder.Hydratable,
        Reflex.Dom.Builder.Immediate,
        Reflex.Dom.Builder.InputDisabled,
        Reflex.Dom.Builder.Static,
        Reflex.Dom.Class,
        Reflex.Dom.Core,
        Reflex.Dom.Location,
        Reflex.Dom.Main,
        Reflex.Dom.Modals.Class,
        Reflex.Dom.Old,
        Reflex.Dom.Prerender,
        Reflex.Dom.Time,
        Reflex.Dom.WebSocket,
        Reflex.Dom.WebSocket.Query,
        Reflex.Dom.Widget,
        Reflex.Dom.Widget.Basic,
        Reflex.Dom.Widget.Input,
        Reflex.Dom.Widget.Lazy,
        Reflex.Dom.Widget.Resize,
        Reflex.Dom.Xhr,
        Reflex.Dom.Xhr.FormData

    cc-options:         -fPIC
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans -fPIC

    build-depends:
        base >=4.7 && <4.21,
        bytestring >=0.10 && <0.13,
        reflex >=0.8 && <1,
        reflex-dom-core >=0.6.1.0 && <0.9,
        text >=1.2 && <2.2

    if os(android)
        build-tools:      hsc2hs >=0
        cpp-options:      -DANDROID
        c-sources:        cbits/MainWidget.c
        hs-source-dirs:   src-android
        other-modules:    Reflex.Dom.Android.MainWidget
        include-dirs:     cbits/include
        install-includes: MainWidget.h
        build-depends:
            aeson >=1.4 && <2.3,
            android-activity >=0.2 && <0.3,
            data-default >=0.7 && <0.8,
            jsaddle >=0.9.6 && <0.10

    if !(impl(ghcjs >=0) || arch(javascript))
        if flag(use-warp)
            build-depends:
                jsaddle >=0.9.6 && <0.10,
                jsaddle-warp >=0.9.6 && <0.10

        else
            if (os(osx) || os(ios))
                build-depends:
                    data-default >=0.7 && <0.8,
                    jsaddle >=0.9.6 && <0.10,
                    jsaddle-wkwebview >=0.9.6 && <0.10

            else
                if flag(wasm32)
                    build-depends:
                        jsaddle >=0.9.6 && <0.10,
                        jsaddle-wasm >=0.1 && <0.2

                else
                    if (flag(webkit2gtk) && !os(android))
                        build-depends: jsaddle-webkit2gtk >=0.9.6 && <0.10

    if flag(expose-all-unfoldings)
        ghc-options: -fexpose-all-unfoldings

    if flag(use-reflex-optimizer)
        ghc-options: -fplugin=Reflex.Optimizer

executable sortableList
    main-is:          sortableList.hs
    hs-source-dirs:   examples
    default-language: Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans
        -fspecialise-aggressively

    build-depends:
        base,
        containers <0.8,
        dependent-map <0.5,
        lens <5.4,
        mtl,
        random <1.3,
        reflex <0.10,
        reflex-dom,
        text <2.2,
        time,
        transformers

    if !flag(build-examples)
        buildable: False

    if flag(expose-all-unfoldings)
        ghc-options: -fexpose-all-unfoldings

    if flag(use-reflex-optimizer)
        ghc-options: -fplugin=Reflex.Optimizer

executable benchmark
    main-is:          benchmark.hs
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -O2 -fspecialise-aggressively
    build-depends:
        base,
        containers <0.8,
        dependent-map <0.5,
        dependent-sum <0.8,
        ghc-prim,
        ghcjs-dom <0.10,
        mtl,
        prim-uniq <0.3,
        random <1.3,
        reflex <0.10,
        reflex-dom,
        text <2.2,
        transformers

    if !impl(ghcjs >=0)
        buildable: False

executable krausest
    main-is:          krausest.hs
    hs-source-dirs:   benchmarks
    default-language: Haskell2010
    ghc-options:      -O2 -fspecialise-aggressively
    build-depends:
        base,
        containers <0.8,
        dependent-map <0.5,
        dependent-sum <0.8,
        ghc-prim,
        ghcjs-dom <0.10,
        mtl,
        prim-uniq <0.3,
        random <1.3,
        reflex <0.10,
        reflex-dom,
        text <2.2,
        transformers,
        vector <0.14

    if impl(ghcjs >=0)
        cpp-options:   -DGHCJS_BROWSER -DGHCJS_GC_INTERVAL=60000
        ghcjs-options: -dedupe

    else
        buildable: False
